--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>First JS Assignment</title>
+      <title>JS problem solving</title>
       <meta charset="UTF-8">
   </head>
     <body>
